# hotrod

./: Cargo.toml  README.md
examples/main/: main.rs
src/: lib.rs  logging.rs
src/engine/: builder.rs  mod.rs
src/engine/part/: mod.rs  sdl.rs  vulkan.rs
src/engine/parts/: egui.rs  mod.rs  sdl.rs  vulkan.rs
src/engine/system/: fps.rs  mod.rs
src/engine/system/canvas/: buffered_layer.rs  mod.rs
src/engine/system/egui/: binding.rs  extensions.rs  mod.rs  styling.rs
src/engine/system/texture/: loader.rs  mod.rs
src/engine/system/ttf/: mod.rs
src/engine/system/vulkan/: buffers.rs  color.rs  fps.rs  mod.rs  path.rs  pipelines.rs  system.rs  wds.rs
src/engine/system/vulkan/beautiful_lines/: lines.frag  lines.vert  mod.rs
src/engine/system/vulkan/desc/: binding_101_window_size.rs  binding_201_world_2d_view.rs  mod.rs
src/engine/system/vulkan/egui/: binding.rs  egui.frag  egui.vert  mod.rs  painter.rs
src/engine/system/vulkan/glowing_balls/: glowing_balls.frag  glowing_balls.vert  mod.rs
src/engine/system/vulkan/lines/: lines.frag  lines.vert  mod.rs
src/engine/system/vulkan/textured/: mod.rs
src/engine/system/vulkan/textures/: image.rs  mod.rs  sampler.rs  texture.rs  textures.frag  textures.vert
src/engine/system/vulkan/triangles/: mod.rs  triangles.vert
src/engine/system/vulkan/utils/: mod.rs  pipeline.rs
src/engine/system/vulkan/wds/: mod.rs
src/engine/system/vulkan/world2d/: mod.rs
src/engine/system/vulkan/world2d/entities/: entities.frag  entities.vert  mod.rs
src/engine/system/vulkan/world2d/terrain/: mod.rs  terrain.frag  terrain.vert
src/engine/types/: mod.rs
src/hint/: video.rs
src/support/: image.rs  mod.rs  scope_functions.rs  sprite_animation.rs  tile_map.rs
src/support/interpolated/: mod.rs  position.rs  scalar.rs
src/support/sprite_sheet/: generator.rs  mod.rs  xml_texture_atlas.rs
src/support/world2d/: view.rs
src/ui/: mod.rs
