[package]
name = "hotrod"
version = "0.1.0"
authors = ["Michael Watzko <michael@watzko.de>"]
edition = "2021"
description = "Indev vulkan renderer"
keywords = ["graphics"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.35.2", features = ["gfx", "raw-window-handle"] }
cgmath = "0.18.0"
vulkano = { version = "0.33.0", git = "https://github.com/vulkano-rs/vulkano.git", rev = "344a15d677d84a8b45769992042f1a24ced14896" }
vulkano-shaders = { version = "0.33.0", git = "https://github.com/vulkano-rs/vulkano.git", rev = "344a15d677d84a8b45769992042f1a24ced14896" }
bytemuck = "1.13.0"
thiserror = { version = "1.0.40", features = [] }
log4rs = "1.2.0"
log = "0.4.17"
nohash-hasher = "0.2.0"

egui = { version = "0.22.0", optional = true }
egui_extras = { version = "0.22.0", optional = true }

[features]
default = ["ui-egui"]
ui-egui = ["egui", "egui_extras"]