[package]
name = "hotrod"
version = "0.1.0"
authors = ["Michael Watzko <michael@watzko.de>"]
edition = "2021"
description = "Indev vulkan renderer"
keywords = ["graphics"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "main"
required-features = ["ui-egui", "ttf-font-renderer"]

[dev-dependencies]
image = "0.25"

[dependencies]
sdl2 = { version = "0.38.0", features = ["gfx", "raw-window-handle", "ttf"], default-features = false }
cgmath = "0.18.0"
vulkano = { version = "0.35.2" }
vulkano-shaders = { version = "0.35.0" }
bytemuck = "1.13.0"
thiserror = { version = "2", features = [] }
nohash-hasher = "0.2.0"
crossbeam = "0.8.4"
tracing = "0.1.41"
rustc-hash = "2.1"

tracing-subscriber = { version = "0.3", optional = true }

egui = { version = "0.32", optional = true }
egui_extras = { version = "0.32", optional = true }
egui-notify = { version = "0.20", optional = true }

serde = { version = "1.0", optional = true, features = ["derive"] }
serde_derive = { version = "1.0", optional = true }
serde-xml-rs = { version = "0.6.0", optional = true }

[features]
default = [
    "ui-egui",
    "ttf-font-renderer",
    "world2d",
    "serde-io",
    "serde-io-xml",
    "logging-initializer",
    "tracing-subscriber-env-filter"
]

ui-egui = ["egui", "egui_extras", "egui-notify"]
ttf-sdl2 = ["sdl2/ttf"]
ttf-font-renderer = ["ttf-sdl2"]
world2d = []
serde-io = ["serde", "serde_derive"]
serde-io-xml = ["serde-io", "serde-xml-rs"]
logging-initializer = ["tracing-subscriber"]
tracing-subscriber-env-filter = ["tracing-subscriber", "tracing-subscriber/env-filter"]